# MuonCVXDDigitiser

./: .gitignore  CMakeLists.txt  README.md
include/: AbstractSensor.h  BitField64.hxx  CellIDDecoder.hxx  ChargeClustersBuilder.h  DetElemSlidingWindow.h  FindUnionAlgorithm.h  G4UniversalFluctuation.h  HKBaseSensor.h  HKOSensor.h  HitTemporalIndexes.h  MuonCTimeVXDDigitiser.h  MuonCVXDDigitiser.h  MuonCVXDRealDigitiser.h  PixelDigiMatrix.h  ShapeProcessingSensor.h  TrivialSensor.h
src/: AbstractSensor.cc  BitField64.cxx  ChargeClustersBuilder.cc  DetElemSlidingWindow.cc  FindUnionAlgorithm.cc  G4UniversalFluctuation.cc  HKBaseSensor.cc  HKOSensor.cc  HitTemporalIndexes.cc  MuonCTimeVXDDigitiser.cc  MuonCVXDDigitiser.cc  MuonCVXDRealDigitiser.cc  PixelDigiMatrix.cc  ShapeProcessingSensor.cc  TrivialSensor.cc
